ProjetCompil/Verif/Test/fail/typeTrouverType2.cas
program
   i : true;
begin
   i := 1; 
end.